🐛 fix: topk값 제한 수정